# donkey

./: .gitignore  .gitmodules  LICENSE
docs/: networks.txt  parts.md
interface/console/: CMakeLists.txt  console.cpp  eth_client.cpp  eth_client.h  inproc.cpp  inproc.h
julia/dlogs/: Project.toml
julia/dlogs/src/: dlogs.jl
julia/dlogs/test/: dlogtest.jl
nano/eye/: CMakeLists.txt  eth_client.cpp  eth_client.h  eye.cpp  eye.h  g4.cpp  g4.h  kbd.cpp  kbd.h  lidar.cpp  lidar.h  main.cpp
nano/scripts/: cs.py  dc_run
src/: eth_api.cpp  eth_api.h
teensy/: CMakeLists.txt  rcmake.sh
teensy/cmake/: options.cmake  toolchain.cmake
teensy/nano_scripts/: donkey_load  teensy_loader_cli
teensy/pjrc/libraries/ADC/: ADC_Module.h
teensy/pjrc/libraries/Entropy/examples/Generate_Password/: Generate_Password.ino
teensy/pjrc/libraries/FastLED/examples/TwinkleFox/: TwinkleFox.ino
teensy/pjrc/libraries/FastLED/src/: fastspi.h
teensy/pjrc/libraries/IRremote/examples/MicroGirs/: MicroGirs.ino
teensy/pjrc/libraries/IRremote/src/: ir_Pronto.hpp
teensy/pjrc/libraries/NativeEthernet/src/: NativeEthernet.cpp
teensy/pjrc/libraries/PWMServo/: PWMServo.cpp
teensy/pjrc/libraries/SdFat/doc/: menudata.js
teensy/pjrc/libraries/SdFat/doc/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+72 more)
teensy/pjrc/libraries/SdFat/extras/attic/: PrintBasic.h
teensy/pjrc/libraries/Servo/: library.properties
teensy/pjrc/teensy4/: Time.cpp
teensy/scripts/: donkey_load  down  routing
teensy/src/: adcsetup.cpp  adcsetup.h  blink.cpp  cmdhandler.cpp  cmdhandler.h  controller.cpp  controller.h  eth.cpp  eth.h  ir.cpp  ir.h  led_indication.cpp  led_indication.h  led_strip.cpp  led_strip.h  logfile.cpp  logfile.h  logsend.cpp  logsend.h  memsic.cpp  memsic.h  motors.cpp  motors.h  paa5100.cpp  paa5100.h  power.cpp  power.h  receiver.cpp  receiver.h  sr04.cpp  sr04.h  teetools.cpp  teetools.h  ttpins.cpp  ttpins.h  ttsetup.cpp  ttsetup.h
